[package]
name = "arrow-pg"
description = "Arrow data mapping and encoding/decoding for Postgres"
version = "0.12.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../README.md"
rust-version.workspace = true

[features]
default = ["arrow"]
arrow = ["dep:arrow"]
datafusion = ["dep:datafusion"]
postgis = ["postgres-types/with-geo-types-0_7", "dep:geoarrow", "dep:geoarrow-schema", "dep:postgis", "dep:geo-postgis", "pgwire/pg-type-postgis", "dep:geo-traits"]

[dependencies]
arrow = { workspace = true, optional = true }
arrow-schema = { workspace = true}
bytes.workspace = true
chrono.workspace = true
datafusion = { workspace = true, optional = true }
futures.workspace = true
geoarrow = { version = "0.7", optional = true }
geoarrow-schema = { version = "0.7", optional = true }
pg_interval = { version = "0.5.1", package = "pg_interval_2" }
pgwire = { workspace = true, default-features = false, features = ["server-api", "pg-ext-types"] }
postgres-types.workspace = true
rust_decimal.workspace = true
postgis = { version = "0.9", optional = true }
geo-postgis = { version = "0.2", optional = true }
geo-traits = { version = "0.3", optional = true }

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1.49", features = ["full"]}
